@@ -1,3 +1,15 @@
+2005-12-23 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b57
+
+ * Change: Added display of creation date in albums.php
+
+ * Change: Wording in register.php
+
+ * New: Added method getCreationDate() in classes/Album.php
+
+ * Change: length for email and fullname field in html/userData.inc
+
+ * Change: change of bars002 skin.
+
 2005-12-19 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b56
 
  * Change: Some css in config.php
